--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,6 +24,9 @@ $dashboardRightSide: 404px;
 $minDashboardRightSide: 230px;
 $courseDetailsRight: 400px;
 $eCard: 367px;
+$chat-left-side: 72px;
+$chat-left-channel-bar: 303px;
+$chat-right-side: 343px;
 
 // fonts
 $font: 'Montserrat', sans-serif;
@@ -53,12 +56,18 @@ $neutral-5: #f8f8f8;
 $gray: #c3c3c3;
 $success: #36b236;
 $error: #ff3333;
+$notify: #ff3333;
 $clr: #efefef;
+$clr-2: #cccccc;
+$clr-3: #4f545c;
+$clr-4: #e4e4e4;
+$clr-5: #ed4245;
 
 // borders
 $border: #dbdde5;
 $border-2: #e7e8f2;
 $border-3: #bbbbbb;
+$border-4: #aaaaaa;
 
 // socials
 $facebook: #1876f1;
