--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -40,6 +40,7 @@ $footer-bg: #eeeeee;
 $primary: #041366;
 $primary-2: #2e31fa;
 $primary-3: #5e8af3;
+$primary-4: #2e72fa;
 $white: #ffffff;
 $black: #000000;
 $soft-stoke: #dddddd;
@@ -57,17 +58,23 @@ $gray: #c3c3c3;
 $success: #36b236;
 $error: #ff3333;
 $notify: #ff3333;
+$active: #12d651;
 $clr: #efefef;
 $clr-2: #cccccc;
 $clr-3: #4f545c;
 $clr-4: #e4e4e4;
 $clr-5: #ed4245;
+$clr-6: #ebedef;
+$clr-7: #4f5660;
+$clr-8: #6a7480;
+$clr-9: #f2f3f5;
 
 // borders
 $border: #dbdde5;
 $border-2: #e7e8f2;
 $border-3: #bbbbbb;
 $border-4: #aaaaaa;
+$border-5: #e7e7e7;
 
 // socials
 $facebook: #1876f1;
