--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -25,8 +25,11 @@ $minDashboardRightSide: 230px;
 $courseDetailsRight: 400px;
 $eCard: 367px;
 $chat-left-side: 72px;
+$chat-left-side-dec: 17px;
 $chat-left-channel-bar: 303px;
+$chat-left-channel-bar-dec: 57px;
 $chat-right-side: 343px;
+$chat-right-side-dec: 53px;
 
 // fonts
 $font: 'Montserrat', sans-serif;
