--- a/components/chat/chat.module.scss
+++ b/components/chat/chat.module.scss
@@ -13,4 +13,8 @@
     top: 0;
     left: 0;
     bottom: 0;
+    transition: 0.25s;
+    @media (max-width: map-get($breakpoints, lg)) {
+        width: calc(($chat-left-side - $chat-left-side-dec) + ($chat-left-channel-bar - $chat-left-channel-bar-dec));
+    }
 }
