--- a/components/chatHeader/chatHeader.module.scss
+++ b/components/chatHeader/chatHeader.module.scss
@@ -14,6 +14,9 @@ $header-pl: 0.875rem;
     left: 0;
     transition: 0.35s;
     z-index: 10;
+    @media (max-width: map-get($breakpoints, lg)) {
+        justify-content: space-between;
+    }
 }
 
 .logoWrapper {
@@ -35,6 +38,9 @@ $header-pl: 0.875rem;
     justify-content: space-between;
     padding-left: 1rem;
     border-left: 1px solid $border-4;
+    @media (max-width: map-get($breakpoints, lg)) {
+        display: none;
+    }
 }
 
 .channelPagination {
@@ -109,6 +115,9 @@ $header-pl: 0.875rem;
     }
     .notify {
         gap: 2rem;
+        @media (max-width: map-get($breakpoints, lg)) {
+            gap: 1rem;
+        }
         .notifyIcon {
             position: relative;
             display: inline-flex;
@@ -119,6 +128,12 @@ $header-pl: 0.875rem;
             border: none;
             outline: none;
             cursor: pointer;
+            @media (max-width: map-get($breakpoints, lg)) {
+                font-size: 1.25rem;
+                > span {
+                    width: 1.15rem !important;
+                }
+            }
             &.active {
                 &::before {
                     content: '';
