--- a/components/chatLeftSide/chatLeftSide.module.scss
+++ b/components/chatLeftSide/chatLeftSide.module.scss
@@ -5,6 +5,9 @@
     width: $chat-left-side;
     min-height: 100%;
     background-color: rgba($clr-2, 50%);
+    @media (max-width: map-get($breakpoints, lg)) {
+        width: $chat-left-side - $chat-left-side-dec;
+    }
 }
 
 .leftSideInner {
@@ -21,6 +24,9 @@
                     justify-content: center;
                     padding: 0 0.625rem 0 0.875rem;
                     position: relative;
+                    @media (max-width: map-get($breakpoints, lg)) {
+                        padding: 0 0.35rem 0 0.5rem;
+                    }
                     &::before {
                         content: '';
                         width: 0.25rem;
@@ -29,7 +35,12 @@
                         border-bottom-right-radius: 1rem;
                         position: absolute;
                         left: 0;
+                        top: 50%;
+                        transform: translateY(-50%);
                         transition: 0.35s;
+                        @media (max-width: map-get($breakpoints, lg)) {
+                            height: 1.5rem;
+                        }
                     }
                     &:hover,
                     &.active {
@@ -40,10 +51,18 @@
                     .serverBox {
                         position: relative;
                         display: inline-flex;
+                        .multiIconBox,
                         .iconBox {
                             $size: 3rem;
+                            $size-2: 2.25rem;
                             width: $size;
                             height: $size;
+                            @media (max-width: map-get($breakpoints, lg)) {
+                                width: $size-2;
+                                height: $size-2;
+                            }
+                        }
+                        .iconBox {
                             display: inline-flex;
                             position: relative;
                             img {
@@ -57,18 +76,20 @@
                                 color: $neutral-3;
                                 font-size: 1.25rem;
                                 border-radius: 50%;
+                                @media (max-width: map-get($breakpoints, lg)) {
+                                    font-size: 1rem;
+                                }
                             }
                         }
                         .multiIconBox {
-                            display: flex;
-                            flex-wrap: wrap;
-                            justify-content: space-between;
+                            display: grid;
+                            grid-template-columns: repeat(2, 1fr);
                             gap: 0.25rem;
                             background-color: $white;
                             border-radius: 0.938rem;
                             padding: 0.375rem;
                             .iconBox {
-                                $size: 1rem;
+                                $size: auto;
                                 width: $size;
                                 height: $size;
                             }
@@ -83,6 +104,11 @@
                             position: absolute;
                             right: 0;
                             z-index: 1;
+                            @media (max-width: map-get($breakpoints, lg)) {
+                                $size: 0.85rem;
+                                width: $size;
+                                height: $size;
+                            }
                             &::before {
                                 content: '';
                                 border: 0.188rem solid $clr-4;
@@ -96,6 +122,9 @@
                                 background-color: $clr-3;
                                 color: $white;
                                 font-size: 0.75rem;
+                                @media (max-width: map-get($breakpoints, lg)) {
+                                    font-size: 0.55rem;
+                                }
                             }
                             &.count {
                                 bottom: 0;
@@ -103,6 +132,9 @@
                                 color: $white;
                                 font-size: 0.625rem;
                                 font: 2700px;
+                                @media (max-width: map-get($breakpoints, lg)) {
+                                    font-size: 0.5rem;
+                                }
                             }
                         }
                     }
