--- a/components/chatMessages/chatMessages.module.scss
+++ b/components/chatMessages/chatMessages.module.scss
@@ -6,6 +6,13 @@
     height: 100vh;
     margin: 0 $chat-right-side 0 calc($chat-left-side + $chat-left-channel-bar);
     padding: 1.875rem 0.75rem 2rem 1.875rem;
+    transition: 0.25s;
+    @media (max-width: map-get($breakpoints, lg)) {
+        width: 100%;
+        margin: 0 0 0
+            calc(($chat-left-side - $chat-left-side-dec) + ($chat-left-channel-bar - $chat-left-channel-bar-dec));
+        padding-left: 1rem;
+    }
 }
 
 .mgsInner {
@@ -16,6 +23,9 @@
             color: $neutral-3;
             font-size: 1rem;
             font-weight: 700;
+            @media (max-width: map-get($breakpoints, lg)) {
+                font-size: 0.85rem;
+            }
         }
     }
 }
@@ -34,12 +44,24 @@
     left: calc(($chat-left-side + $chat-left-channel-bar) + 2rem);
     z-index: 2;
     gap: 1.25rem;
+    transition: 0.25s;
+    @media (max-width: map-get($breakpoints, lg)) {
+        gap: 0.85rem;
+        left: calc(
+            (($chat-left-side - $chat-left-side-dec) + ($chat-left-channel-bar - $chat-left-channel-bar-dec)) + 2rem
+        );
+        right: 1rem;
+    }
     .mgsReacts {
         display: flex;
         align-items: center;
         gap: 1.25rem;
+        @media (max-width: map-get($breakpoints, lg)) {
+            gap: 0.8rem;
+        }
         .reactBtnWrapper {
             position: relative;
+            display: inline-flex;
             .reactBtn {
                 position: relative;
                 display: inline-flex;
@@ -53,6 +75,12 @@
                     color: $primary;
                     font-size: 1.5rem;
                     cursor: pointer;
+                    @media (max-width: map-get($breakpoints, lg)) {
+                        > span {
+                            width: 0.85rem !important;
+                        }
+                        font-size: 1rem;
+                    }
                 }
                 .tooltip {
                     position: absolute;
@@ -95,8 +123,11 @@
         .formBox {
             display: flex;
             gap: 1.25rem;
+            @media (max-width: map-get($breakpoints, lg)) {
+                gap: 0.85rem;
+            }
             .input {
-                flex-grow: 1;
+                width: 100%;
                 background-color: $soft-stoke;
                 color: $neutral-2;
                 font-size: 0.875rem;
@@ -104,6 +135,9 @@
                 border: 1px solid $border-5;
                 border-radius: 0.625rem;
                 outline: none;
+                @media (max-width: map-get($breakpoints, lg)) {
+                    padding: 0.75rem 1rem;
+                }
             }
             .submitBtn {
                 display: inline-flex;
@@ -115,7 +149,14 @@
                 font-weight: 600;
                 padding: 0.938rem 2.75rem;
                 border-radius: 0.625rem;
+                border: none;
+                outline: none;
                 cursor: pointer;
+                @media (max-width: map-get($breakpoints, lg)) {
+                    font-size: 0.75rem;
+                    padding: 0.75rem 1rem;
+                    gap: 0.45rem;
+                }
                 .sIcon {
                     transform: rotate(45deg);
                 }
