--- a/components/chatMgsItem/chatMgsItem.module.scss
+++ b/components/chatMgsItem/chatMgsItem.module.scss
@@ -14,11 +14,19 @@
     gap: 0.625rem;
     line-height: 1.3722;
     margin-bottom: 1.5rem;
+    @media (max-width: map-get($breakpoints, lg)) {
+        max-width: 80%;
+    }
     .imgBox {
         position: relative;
         flex-shrink: 0;
         position: relative;
         display: inline-flex;
+        > span:not(.active) {
+            $size: 2.5rem;
+            width: $size !important;
+            height: $size !important;
+        }
         .active {
             $size: 0.625rem;
             width: $size;
@@ -40,17 +48,26 @@
                 font-family: $font-2;
                 font-size: 0.938rem;
                 font-weight: 500;
+                @media (max-width: map-get($breakpoints, lg)) {
+                    font-size: 0.85rem;
+                }
             }
             .time {
                 color: $neutral-2;
                 font-size: 0.75rem;
                 font-weight: 400;
+                @media (max-width: map-get($breakpoints, lg)) {
+                    font-size: 0.65rem;
+                }
             }
         }
         .body {
             margin-top: 0.313rem;
             .para {
                 font-size: 0.875rem;
+                @media (max-width: map-get($breakpoints, lg)) {
+                    font-size: 0.75rem;
+                }
             }
             .linkWrapper {
                 position: relative;
@@ -59,6 +76,9 @@
                     color: $primary-4;
                     font-size: 0.875rem;
                     font-weight: 600;
+                    @media (max-width: map-get($breakpoints, lg)) {
+                        font-size: 0.7rem;
+                    }
                     &:hover {
                         text-decoration: underline;
                         text-underline-offset: 0.15em;
