--- a/components/chatRightSide/chatRightSide.module.scss
+++ b/components/chatRightSide/chatRightSide.module.scss
@@ -3,6 +3,7 @@
 
 .sidebar {
     width: $chat-right-side;
+    max-width: 100%;
     height: 100%;
     background: rgba($white, 35%);
     position: fixed;
