--- a/components/chatServer/chatServer.module.scss
+++ b/components/chatServer/chatServer.module.scss
@@ -3,6 +3,7 @@
 
 .server {
     width: $chat-left-channel-bar;
+    max-width: 100%;
     position: relative;
     flex-grow: 1;
     min-height: 100%;
